// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base Components Provider renders 1`] = `
<div
  className="sc-bxivhb mTdqx"
/>
`;

exports[`Base Components Provider renders with custom theme 1`] = `
<div
  className="sc-bxivhb mTdqx"
/>
`;

exports[`Base Components renders Arrow up 1`] = `
<div
  className="sc-gisBJw cdXxWo"
  direction="up"
/>
`;

exports[`Base Components renders BackgroundImage src 1`] = `
<div
  className="sc-jWBwVP fpNRhw"
  src="hello.png"
/>
`;

exports[`Base Components renders Banner backgroundImage 1`] = `
<div
  className="sc-hzDkRC fMsqjN sc-jDwBTQ fvRAFR"
  src="hello.png"
/>
`;

exports[`Base Components renders Border border 2 1`] = `
<div
  className="sc-iRbamj dEAPjI"
/>
`;

exports[`Base Components renders Border bottom 1`] = `
<div
  className="sc-iRbamj koKMMY"
/>
`;

exports[`Base Components renders Border left 1`] = `
<div
  className="sc-iRbamj hpvCmB"
/>
`;

exports[`Base Components renders Border none 1`] = `
<div
  className="sc-iRbamj eUtTPE"
/>
`;

exports[`Base Components renders Border right 1`] = `
<div
  className="sc-iRbamj erOyQC"
/>
`;

exports[`Base Components renders Border top 1`] = `
<div
  className="sc-iRbamj cwjjpQ"
/>
`;

exports[`Base Components renders Carousel index 1`] = `
<div
  className="sc-kvZOFW iXYPHb sc-jDwBTQ fvRAFR"
  index={2}
/>
`;

exports[`Base Components renders Drawer open 1`] = `
<div
  className="sc-frDJqD nfxEF sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={true}
  position="left"
  size={320}
/>
`;

exports[`Base Components renders Drawer open position bottom 1`] = `
<div
  className="sc-frDJqD dGHoFl sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={true}
  position="bottom"
  size={320}
/>
`;

exports[`Base Components renders Drawer open position left 1`] = `
<div
  className="sc-frDJqD nfxEF sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={true}
  position="left"
  size={320}
/>
`;

exports[`Base Components renders Drawer open position right 1`] = `
<div
  className="sc-frDJqD dAwLKH sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={true}
  position="right"
  size={320}
/>
`;

exports[`Base Components renders Drawer open position top 1`] = `
<div
  className="sc-frDJqD kFHNnh sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={true}
  position="top"
  size={320}
/>
`;

exports[`Base Components renders Drawer position bottom 1`] = `
<div
  className="sc-frDJqD cStEcd sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={false}
  position="bottom"
  size={320}
/>
`;

exports[`Base Components renders Drawer position left 1`] = `
<div
  className="sc-frDJqD jFGpvY sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={false}
  position="left"
  size={320}
/>
`;

exports[`Base Components renders Drawer position right 1`] = `
<div
  className="sc-frDJqD caADMc sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={false}
  position="right"
  size={320}
/>
`;

exports[`Base Components renders Drawer position top 1`] = `
<div
  className="sc-frDJqD kkaFqL sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={false}
  position="top"
  size={320}
/>
`;

exports[`Base Components renders Drawer size 1`] = `
<div
  className="sc-frDJqD fyoFpB sc-cJSrbW cnUWKq sc-cHGsZl fBTdNA"
  open={false}
  position="left"
  size={128}
/>
`;

exports[`Base Components renders Embed ratio 1`] = `
<div
  className="sc-cMljjf gnIyZy"
/>
`;

exports[`Base Components renders NavLink active 1`] = `
<a
  active={true}
  className="sc-dnqmqq RKeDb"
/>
`;

exports[`Base Components renders Text bold 1`] = `
<div
  className="sc-gqjmRU cbBDfA"
/>
`;
